# Ledgrionyx

./: .env  .gitlab-ci.yml  IMPLEMENTATION_VERIFICATION.txt  LOGO_PROJECT_SUMMARY.txt  QUICK_START_ACCOUNTING.md  bitbucket-pipelines.yml  docker-compose.yml  setup.sh  start.sh
.github/workflows/: ci.yml  deploy-pages.yml  jekyll-gh-pages.yml
README/: CLI_AUTHENTICATION_GUIDE.md  PLATFORM_IMPLEMENTATION_DIRECTIVE.md
api/: .env.example  README.md  create_test_org.py  requirements.txt
api/equity/: admin.py  apps.py  automation.py  documents.py  models.py  presets.py  scenario_services.py  serializers.py  services.py  urls.py  views.py
app/: README.md  atccapital  ledgrionyx-public-standards-baseline.json  package-lock.json  package.json
atccapital-readme/: API_MODELS_REFERENCE.md  ATC_CAPITAL_PUBLIC_NARRATIVE.md  ATC_CORE_FINANCIAL_API_V1_DEVELOPER_GUIDE.md  GITHUB_DEPLOYMENT_GUIDE.md  GLOBAL_TAX_DEPLOYMENT_READY.txt  IMPLEMENTATION_COMPLETE1.md  README.md  README_ACCOUNTING_SYSTEM.md
backend/: README.md  requirements.txt
brandinyx/: README.md  generate_social_pngs.py
docs/: financial-dashboard-design-bible.md
frontend/: package-lock.json  package.json
ledgrionyxmobile/: App.tsx  app.json  package-lock.json  package.json
mobile-ios/: README.md  app.json  package-lock.json  package.json  tsconfig.json
tools/: fix_empty_jsx.py  fix_remaining_icons.py  generate_tax_countries_all207.py  remove_emoji_icons.py
tools/atc_cli/: README.md  pyproject.toml
tools/atc_cli/atc_cli/: api.py  main.py  storage.py
tools/atc_cli/tests/: test_cli.py
(+669 files in other folders)
